--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -163,10 +163,14 @@ jobs:
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
             pkgutil --check-signature ${MNE_INSTALLER_NAME} || exit 1
           fi
-          # Now extract the package and check that the conda.exe binary is
+          # Now extract the package and check that the _conda.exe binary is
           # properly signed as well
           pkgutil --expand-full ${MNE_INSTALLER_NAME} ./mne-extracted
-          BINARY="./mne-extracted/main.pkg/Payload${MNE_INSTALL_PREFIX}/conda.exe"
+          echo "Checking ${DIR} exists"
+          DIR="./mne-extracted/main.pkg/Payload${MNE_INSTALL_PREFIX}"
+          test -d "$DIR"
+          ls -al "$DIR"
+          BINARY="${DIR}/_conda.exe"
           echo "Checking ${BINARY} exists"
           test -e "${BINARY}"
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
