--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -163,20 +163,18 @@ jobs:
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
             pkgutil --check-signature ${MNE_INSTALLER_NAME} || exit 1
           fi
-          # Now extract the package and check that the _conda.exe binary is
+          # Now extract the package and check that the conda.exe binary is
           # properly signed as well
           pkgutil --expand-full ${MNE_INSTALLER_NAME} ./mne-extracted
+          DIR="./mne-extracted/prepare_installation.pkg/Payload/.mne-python"
           echo "Checking ${DIR} exists"
-          DIR="./mne-extracted/main.pkg/Payload${MNE_INSTALL_PREFIX}"
           test -d "$DIR"
           ls -al "$DIR"
-          BINARY="${DIR}/_conda.exe"
+          BINARY="${DIR}/conda.exe"
           echo "Checking ${BINARY} exists"
           test -e "${BINARY}"
-          if [[ "${{ github.event_name }}" != "pull_request" ]]; then
-            echo "Checking ${BINARY} is signed"
-            codesign -vd "${BINARY}" || exit 1
-          fi
+          echo "Checking ${BINARY} is signed"
+          codesign -vd "${BINARY}"
           echo "Checking entitlements of ${BINARY}"
           codesign --display --entitlements - "${BINARY}"
           rm -rf ./mne-extracted
