MAINT: Bump to 1.5.1 (#205)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,9 +129,12 @@ jobs:
           test "$MNE_INSTALLER_NAME" != ""
           echo "Artifact ID: ${MNE_INSTALLER_ARTIFACT_ID}"
           test "$MNE_INSTALLER_ARTIFACT_ID" != ""
+          echo "Prefix:      ${MNE_INSTALL_PREFIX}"
+          test "$MNE_INSTALL_PREFIX" != ""
           echo "MNE_INSTALLER_VERSION=${MNE_INSTALLER_VERSION}" >> $GITHUB_ENV
           echo "MNE_INSTALLER_NAME=${MNE_INSTALLER_NAME}" >> $GITHUB_ENV
           echo "MNE_INSTALLER_ARTIFACT_ID=${MNE_INSTALLER_ARTIFACT_ID}" >> $GITHUB_ENV
+          echo "MNE_INSTALL_PREFIX=${MNE_INSTALL_PREFIX}" >> $GITHUB_ENV
           echo "RECIPE_DIR=${RECIPE_DIR}" >> $GITHUB_ENV
           echo "CONDA_SOLVER=libmamba" >> $GITHUB_ENV
           if [[ "$MNE_CROSSCOMPILE_ARCH" == "arm64" ]]; then
@@ -153,15 +156,21 @@ jobs:
           ./tools/run_constructor.sh
 
       - name: Check installer signature (macOS)
-        if: ${{ runner.os == 'macOS' && github.event_name != 'pull_request' }}
+        if: ${{ runner.os == 'macOS' }}
         run: |
           # Installer package
           set -eo pipefail
-          pkgutil --check-signature ${MNE_INSTALLER_NAME}
+          if [[ "${{ github.event_name }}" != "pull_request" ]]; then
+            pkgutil --check-signature ${MNE_INSTALLER_NAME} || exit 1
+          fi
           # Now extract the package and check that the conda.exe binary is
           # properly signed as well
           pkgutil --expand-full ${MNE_INSTALLER_NAME} ./mne-extracted
-          BINARY="./mne-extracted/main.pkg/Payload${MNE_INSTALL_PREFIX}/conda.exe"
+          DIR="./mne-extracted/prepare_installation.pkg/Payload/.mne-python"
+          echo "Checking ${DIR} exists"
+          test -d "$DIR"
+          ls -al "$DIR"
+          BINARY="${DIR}/conda.exe"
           echo "Checking ${BINARY} exists"
           test -e "${BINARY}"
           echo "Checking ${BINARY} is signed"
@@ -304,7 +313,8 @@ jobs:
           echo "MNE_INSTALLER_VERSION=${MNE_INSTALLER_VERSION}"
           echo "MNE_ACTIVATE=${MNE_ACTIVATE}" >> $GITHUB_ENV
           echo "MNE_ACTIVATE=${MNE_ACTIVATE}"
-          echo "MNE_INSTALL_PREFIX=$MNE_INSTALL_PREFIX" >> $GITHUB_ENV
+          echo "MNE_INSTALL_PREFIX=${MNE_INSTALL_PREFIX}" >> $GITHUB_ENV
+          echo "MNE_INSTALL_PREFIX=${MNE_INSTALL_PREFIX}"
           echo "NSIS_SCRIPTS_RAISE_ERRORS=1" >> $GITHUB_ENV
 
       - name: Download appropriate installer
