--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,7 +195,6 @@ jobs:
           # Staple the notarization certificate onto it
           xcrun stapler staple ${MNE_INSTALLER_NAME}
 
-      # Note: if this changes, it needs to be changed in the Windows signing step as well
       - name: Calculate SHA256 hash of installer package
         run: |
           shopt -s nullglob  # Fail if the following pattern yields no results
@@ -223,66 +222,9 @@ jobs:
           name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
           path: MNE-Python-*.*
 
-  # The Windows signing needs to be done on Linux
-  # https://www.ssl.com/how-to/cloud-code-signing-integration-with-github-actions/
-  sign:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Determine installer name (cross-OS)
-        if: github.event_name != 'pull_request'
-        run: |
-          source ./tools/extract_version.sh Windows
-          echo "MNE_INSTALLER_ARTIFACT_ID=${MNE_INSTALLER_ARTIFACT_ID}" >> $GITHUB_ENV
-          echo "MNE_INSTALLER_NAME=${MNE_INSTALLER_NAME}" >> $GITHUB_ENV
-          echo "MNE_INSTALLER_VERSION=${MNE_INSTALLER_VERSION}" >> $GITHUB_ENV
-          mkdir signed
-      - name: Download appropriate installer
-        if: github.event_name != 'pull_request'
-        uses: actions/download-artifact@v3
-        with:
-          name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
-      - name: EV-code sign installer (Windows)
-        if: github.event_name != 'pull_request'
-        uses: sslcom/esigner-codesign@develop
-        with:
-          command: sign
-          username: ${{ secrets.ES_USERNAME }}
-          password: ${{ secrets.ES_PASSWORD }}
-          credential_id: ${{ secrets.ES_CREDENTIAL_ID }}
-          totp_secret: ${{ secrets.ES_TOTP_SECRET }}
-          file_path: ${GITHUB_WORKSPACE}/${{ env.MNE_INSTALLER_NAME }}
-          override: true
-      - name: Calculate new SHA256 hash of installer package
-        if: github.event_name != 'pull_request'
-        run: |
-          shopt -s nullglob  # Fail if the following pattern yields no results
-          echo "Finding matches"
-          matches=(MNE-Python-*-*.*)
-          echo "Extracting fname"
-          installer_fname="${matches[0]}"
-          echo "Found name: ${installer_fname}"
-          echo "Want name:  ${MNE_INSTALLER_NAME}"
-          test "$installer_fname" == "$MNE_INSTALLER_NAME"
-          hash_fname="${MNE_INSTALLER_NAME}.sha256.txt"
-          echo "Old hash:"
-          cat "$hash_fname"
-          OLD_HASH="$(cat $hash_fname)"
-          shasum -a 256 "$MNE_INSTALLER_NAME" > "$hash_fname"
-          echo "New hash:"
-          cat "$hash_fname"
-          test "$(cat $hash_fname)" != "$OLD_HASH"
-      - name: Overwrite artifacts
-        if: github.event_name != 'pull_request'
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
-          path: MNE-Python-*.*
-
   # Test
   test:
-    needs: [build, sign]
+    needs: [build]
     strategy:
       fail-fast: false
       matrix:
@@ -321,12 +263,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
-
-      - name: Check installer signing (Windows)
-        if: ${{ runner.os == 'Windows' && github.event_name != 'pull_request' }}
-        shell: cmd
-        run: |
-          "C:\Program Files (x86)\Windows Kits\10\bin\10.0.17763.0\x86\signtool.exe" verify /pa /v .\%MNE_INSTALLER_NAME%
 
       - name: Run installer (macOS Intel)
         if: ${{ runner.os == 'macOS' && matrix.arch == 'x86_64' }}
@@ -455,7 +391,7 @@ jobs:
 
   # Release
   release:
-    needs: [build, sign, test]
+    needs: [build, test]
     if: github.ref_type == 'tag'
     runs-on: ubuntu-latest
     defaults:
