--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -160,6 +160,9 @@ specs:
   - pre-commit =3.4.0
   - ruff =0.0.287
   - black =23.7.0
+  - py-spy =0.3.14
+  - line_profiler =4.1.1
+  - memory_profiler =0.61.0
 
 condarc:
   channels:
