--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -1,25 +1,87 @@
-name: MNE-Python
-version: 0.23.0_installer-2021.1
+version: 0.24.1_2
+name: MNE-Python           # [not osx]
+# macOS .pkg installer defaults to ~/$NAME, so let's include the version number
+# in this path
+name: MNE-Python_0.24.1_2  # [osx]
+
 company: MNE-Python Developers
 
-environment_file: mne-python_0.23.0_env.yml
-license_file: ../../LICENSE
+license_file: ../../assets/license.rtf
+welcome_image: ../../assets/welcome_macOS.png  # [osx]
+welcome_image: ../../assets/welcome.png        # [not osx]
+header_image: ../../assets/header.png
+icon_image: ../../assets/icon.png
+welcome_file: ../../assets/welcome.rtf
+readme_text: ""
+conclusion_file: ../../assets/conclusion.rtf
 
 initialize_by_default: false
 register_python_default: false
-default_prefix: ${HOME}/mne-python/0.23.0         # [unix]
-default_prefix: ${USERPROFILE}\mne-python\0.23.0  # [win]
-uninstall_name: MNE-Python 0.23.0 (${VERSION}, Python ${PYVERSION})
+
+# default_prefix will be ignored by macOS .pkg installer!
+default_prefix: ${HOME}/mne-python/0.24.1_2                          # [unix]
+default_prefix: "%USERPROFILE%\\mne-python\\0.24.1_2"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\0.24.1_2"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\0.24.1_2"  # [win]
+
+uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
 installer_type: pkg  # [osx]
-installer_filename: MNE-Python-0.23.0_installer-2021.1-macOS.pkg    # [osx]
-installer_filename: MNE-Python-0.23.0_installer-2021.1-Windows.exe  # [win]
-installer_filename: MNE-Python-0.23.0_installer-2021.1-Linux.sh     # [linux]
+installer_filename: MNE-Python-0.24.1_2-macOS_Intel.pkg  # [osx]
+installer_filename: MNE-Python-0.24.1_2-Windows.exe      # [win]
+installer_filename: MNE-Python-0.24.1_2-Linux.sh         # [linux]
 
 channels:
   - conda-forge
 
-conda_default_channels:
-  - conda-forge
+specs:
+  - mne ==0.24.1
+  - mne-bids =0.9
+  - mne-connectivity =0.2
+  - mne-faster =1.0
+  - mne-nirs =0.1
+  - mne-realtime =0.1
+  - autoreject =0.3
+  - python =3.9
+  - pip
+  - conda
+  - mamba
+  - miniforge_console_shortcut  # [win]
+  - jupyter
+  - jupyterlab
+  - ipykernel
+  - nb_conda_kernels
+  - spyder-kernels >=1.10.0
+  - spyder
+  - ipympl
+  - ipywidgets
+  - ipyvtklink
+  - darkdetect
+  - qdarkstyle
+  # Excel I/O
+  - openpyxl
+  - xlrd
+  # Statistics
+  - pingouin
+  - pycircstat
+  # MRI
+  - fsleyes
+  - dcm2niix
+  # Time-frequency analysis
+  - pactools
+  - tensorpac
+  - emd
+  - neurodsp
+  - bycycle
+  - fooof
+  # NeuroSpin needs the following
+  - questionary
 
-write_condarc: true
+condarc:
+  channels:
+    - conda-forge
+  # default_channels:
+  #   - conda-forge
+  channel_priority: strict
+  allow_other_channels: false
+  env_prompt: (mne-0.24.1_2)
