--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -1,4 +1,4 @@
-version: 1.2.3_0
+version: 1.3.1_0
 name: MNE-Python
 company: MNE-Python Developers
 # When the version above changes to a new major/minor, it needs to be updated
@@ -18,17 +18,17 @@ initialize_by_default: false
 register_python_default: false
 
 # default_prefix will be ignored by macOS .pkg installer!
-default_prefix: ${HOME}/mne-python/1.2.3_0                          # [linux]
-default_prefix: "%USERPROFILE%\\mne-python\\1.2.3_0"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.2.3_0"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.2.3_0"  # [win]
+default_prefix: ${HOME}/mne-python/1.3.1_0                          # [linux]
+default_prefix: "%USERPROFILE%\\mne-python\\1.3.1_0"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.3.1_0"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.3.1_0"  # [win]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.2.3_0-macOS_Intel.pkg  # [osx and not arm64]
-installer_filename: MNE-Python-1.2.3_0-macOS_M1.pkg     # [osx and arm64]
-installer_filename: MNE-Python-1.2.3_0-Windows.exe      # [win]
-installer_filename: MNE-Python-1.2.3_0-Linux.sh         # [linux]
+installer_filename: MNE-Python-1.3.1_0-macOS_Intel.pkg  # [osx and not arm64]
+installer_filename: MNE-Python-1.3.1_0-macOS_M1.pkg     # [osx and arm64]
+installer_filename: MNE-Python-1.3.1_0-Windows.exe      # [win]
+installer_filename: MNE-Python-1.3.1_0-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
@@ -46,6 +46,8 @@ menu_packages:
 
 channels:
   - conda-forge
+  # conda-forge doesn't provide pytorch packages for Windows
+  # - pytorch  # [win]
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
@@ -60,21 +62,22 @@ specs:
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
-  - mne =1.2.3=*_0
-  - mne-installer-menus =1.2.3=*_0
-  - mne-bids =0.11.1
-  - mne-bids-pipeline =1.0.2
+  - mne =1.3.1=*_0
+  - mne-installer-menus =1.3.1=*_0
+  - mne-bids =0.12.0
+  - mne-bids-pipeline =1.1.0
   - mne-qt-browser =0.4.0
-  - mne-connectivity =0.4.0
+  - mne-connectivity =0.5.0
   - mne-faster =1.1.0
-  - mne-nirs =0.4.0
+  - mne-nirs =0.5.0
   - mne-realtime =0.2.0
   - mne-features =0.2.1
   - mne-rsa =0.8
-  - mne-ari =0.1.1
-  - mne-kit-gui =1.0.1
+  - mne-ari =0.1.2
+  - mne-kit-gui =1.1.0
   - mne-icalabel =0.4  # [not win]
-  - autoreject =0.4.0
+  - autoreject =0.4.1
+  - pyriemann =0.4
   - pyprep =0.4.2
   - openmeeg =2.5.5
   # Python
@@ -127,14 +130,15 @@ specs:
   - ipympl
   - seaborn
   - plotly
-  - vtk =9.2.2
+  - vtk =9.2.5
   # Temporary
   # for VS Code compatibility: https://github.com/microsoft/vscode-jupyter/issues/8552#issuecomment-1263940999
   - ipywidgets <8
 
 condarc:
   channels:
+    # - pytorch  # [win]
     - conda-forge
   channel_priority: strict
   allow_other_channels: false
-  env_prompt: "(mne-1.2.3_0) "
+  env_prompt: "(mne-1.3.1_0) "
