--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -297,20 +297,11 @@ jobs:
           name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}-json
           path: MNE-Python-*.env.json
 
-      - name: Setup graphical support (Linux)
-        if: ${{ runner.os == 'Linux' }}
-        run: |
-          source "${MNE_ACTIVATE}"
-          sudo apt-get install -y xvfb
-          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x1024x24 -ac +extension GLX +render -noreset -nolisten tcp -nolisten unix
-          export DISPLAY=":99"
-          echo "DISPLAY=:99" >> $GITHUB_ENV
-
-      - name: Setup graphical support (Windows)
-        if: ${{ runner.os == 'Windows' }}
-        run: |
-          git clone --depth 1 https://github.com/pyvista/gl-ci-helpers.git
-          powershell ./gl-ci-helpers/appveyor/install_opengl.ps1
+      - name: Setup graphical support
+        uses: pyvista/setup-headless-display-action@main
+        with:
+          qt: true
+          pyvista: false
 
       - name: Check installation
         if: ${{ matrix.arch == 'x86_64' }}
@@ -388,6 +379,9 @@ jobs:
           python -u tests/test_gui.py
           python -u tests/test_notebook.py
           python -u tests/test_json_versions.py
+
+          echo "Checking that all packages are installed that MNE-Python devs would need"
+          python -u tests/test_dev_installed.py
 
   # Release
   release:
