--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -94,6 +94,7 @@ specs:
   - pyriemann =0.5
   - pyprep =0.4.3
   - openmeeg =2.5.6
+  - python-neo =0.12.0
   # BLAS
   - openblas =0.3.24
   - libblas =3.9.0=*openblas
@@ -149,6 +150,7 @@ specs:
   - make =4.3  # [win]
   - ipywidgets =8.1.1
   - pyvista =0.42.3
+  - pyvistaqt =0.11.0
   - trame =3.3.0
   - trame-vtk =2.6.1
   - trame-vuetify =2.3.1
@@ -158,12 +160,26 @@ specs:
   - pytest-cov =4.1.0
   - pytest-qt =4.2.0
   - pytest-harvest =1.10.4
+  - pytest-timeout =2.2.0
   - pre-commit =3.5.0
   - ruff =0.1.5
   - black =23.10.1
+  - check-manifest =0.49.0
+  - codespell =2.2.6
+  - nitime =0.10.2
   - py-spy =0.3.14
   - line_profiler =4.1.1
   - memory_profiler =0.61.0
+  # Doc building
+  - numpydoc =1.5.0
+  - pydata-sphinx-theme =0.13.3
+  - pygraphviz =1.11.0
+  - selenium =4.15.2
+  - sphinx-design =0.5.0
+  - sphinx-gallery =0.14.0
+  - sphinxcontrib-bibtex =2.6.1
+  - sphinx-copybutton =0.5.2
+  - sphinxcontrib-youtube =1.4.1
 
 condarc:
   channels:
