--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -172,6 +172,7 @@ specs:
   # Doc building
   - numpydoc =1.5.0
   - pydata-sphinx-theme =0.13.3
+  - graphviz =8.1.0
   - pygraphviz =1.11.0
   - selenium =4.15.1
   - sphinx-design =0.5.0
