--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -169,6 +169,7 @@ specs:
   - py-spy =0.3.14
   - line_profiler =4.1.1
   - memory_profiler =0.61.0
+  - twine =4.0.2
   # Doc building
   - numpydoc =1.5.0
   - pydata-sphinx-theme =0.13.3
