--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -77,7 +77,7 @@ specs:
   # below for speed, and change mne to mne-base above
   - mne-bids =0.13.0
   - mne-bids-pipeline =1.4.0
-  - mne-qt-browser =0.6.0
+  - mne-qt-browser =0.6.1
   - mne-connectivity =0.5.0
   - mne-faster =1.1.0
   - mne-nirs =0.5.0
@@ -90,10 +90,11 @@ specs:
   - mne-gui-addons =0.1.0
   - mne-lsl =1.0.0
   - traitsui =8.0.0
-  - autoreject =0.4.2
+  - autoreject =0.4.3
   - pyriemann =0.5
   - pyprep =0.4.3
   - openmeeg =2.5.6
+  - python-neo =0.12.0
   # BLAS
   - openblas =0.3.24
   - libblas =3.9.0=*openblas
@@ -112,9 +113,8 @@ specs:
   - xlrd =2.0.1
   # Statistics
   - pingouin =0.5.3
-  - pycircstat =0.0.2
   # MRI
-  - fsleyes =1.9.0
+  - fsleyes =1.10.0
   - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
@@ -135,7 +135,7 @@ specs:
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.7
   # GitHub client, https://cli.github.com
-  - gh =2.38.0
+  - gh =2.39.1
   # NeuroSpin needs the following
   - questionary =2.0.1
   - pqdm =0.2.0
@@ -149,21 +149,39 @@ specs:
   - make =4.3  # [win]
   - ipywidgets =8.1.1
   - pyvista =0.42.3
+  - pyvistaqt =0.11.0
   - trame =3.3.0
-  - trame-vtk =2.6.0
+  - trame-vtk =2.6.1
   - trame-vuetify =2.3.1
+  - termcolor =2.3.0
   # Development
   - setuptools_scm =8.0.4
   - pytest =7.4.3
   - pytest-cov =4.1.0
   - pytest-qt =4.2.0
   - pytest-harvest =1.10.4
+  - pytest-timeout =2.2.0
   - pre-commit =3.5.0
   - ruff =0.1.5
   - black =23.10.1
+  - check-manifest =0.49.0
+  - codespell =2.2.6
+  - nitime =0.10.2
   - py-spy =0.3.14
   - line_profiler =4.1.1
   - memory_profiler =0.61.0
+  - twine =4.0.2
+  # Doc building
+  - numpydoc =1.5.0
+  - pydata-sphinx-theme =0.13.3
+  - graphviz =8.1.0
+  - pygraphviz =1.11.0
+  - selenium =4.15.1
+  - sphinx-design =0.5.0
+  - sphinx-gallery =0.14.0
+  - sphinxcontrib-bibtex =2.6.1
+  - sphinx-copybutton =0.5.2
+  - sphinxcontrib-youtube =1.4.1
 
 condarc:
   channels:
