--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -93,7 +93,7 @@ specs:
   - autoreject =0.4.3
   - pyriemann =0.5
   - pyprep =0.4.3
-  - openmeeg =2.5.6
+  - openmeeg =2.5.7
   - python-neo =0.12.0
   # BLAS
   - openblas =0.3.24
@@ -111,6 +111,7 @@ specs:
   - pyxdf =1.16.4
   - openpyxl =3.1.2
   - xlrd =2.0.1
+  - snirf =0.7.4
   # Statistics
   - pingouin =0.5.3
   # MRI
@@ -175,7 +176,7 @@ specs:
   - numpydoc =1.5.0
   - pydata-sphinx-theme =0.13.3
   - graphviz =8.1.0
-  - pygraphviz =1.11.0
+  - python-graphviz =0.20.1
   - selenium =4.15.1
   - sphinx-design =0.5.0
   - sphinx-gallery =0.14.0
