--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:  # yamllint disable-line rule:truthy
   push:
     branches:
       - main
+      - macos-certs
     tags:
       - '*'
   pull_request:
