--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -171,6 +171,7 @@ specs:
   - line_profiler =4.1.1
   - memory_profiler =0.61.0
   - twine =4.0.2
+  - hatchling =1.21.0
   # Doc building
   - numpydoc =1.6.0
   - pydata-sphinx-theme =0.13.3
