--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -64,6 +64,7 @@ specs:
   - pip =23.3.2
   - conda =23.10.0
   - mamba =1.5.3
+  - fmt =10.1.1
   - conda-libmamba-solver =23.11.1
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
