--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -97,7 +97,7 @@ specs:
   - openmeeg =2.5.7
   - python-neo =0.12.0
   # BLAS
-  - openblas =0.3.25
+  - openblas =0.3.26
   - libblas =3.9.0=*openblas
   - jupyter =1.0.0
   - jupyterlab =4.0.10
@@ -109,12 +109,12 @@ specs:
   - qdarkstyle =3.2.3
   - numba =0.58.1
   # I/O
-  - pyxdf =1.16.4
+  - pyxdf =1.16.5
   - openpyxl =3.1.2
   - xlrd =2.0.1
   - snirf =0.7.4
   # Statistics
-  - pingouin =0.5.3
+  - pingouin =0.5.\4
   # MRI
   - fsleyes =1.10.1
   - dcm2niix =1.0.20230411
@@ -137,7 +137,7 @@ specs:
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.7
   # GitHub client, https://cli.github.com
-  - gh =2.41.0
+  - gh =2.42.0
   # NeuroSpin needs the following
   - questionary =2.0.1
   - pqdm =0.2.0
@@ -152,8 +152,8 @@ specs:
   - ipywidgets =8.1.1
   - pyvista =0.42.3
   - pyvistaqt =0.11.0
-  - trame =3.5.0
-  - trame-vtk =2.6.3
+  - trame =3.5.1
+  - trame-vtk =2.7.0
   - trame-vuetify =2.3.1
   - termcolor =2.4.0
   # Development
@@ -164,7 +164,7 @@ specs:
   - pytest-harvest =1.10.4
   - pytest-timeout =2.2.0
   - pre-commit =3.6.0
-  - ruff =0.1.11
+  - ruff =0.1.13
   - check-manifest =0.49.0
   - codespell =2.2.6
   - nitime =0.10.2
@@ -184,7 +184,7 @@ specs:
   - selenium =4.16.0
   - sphinx-design =0.5.0
   - sphinx-gallery =0.15.0
-  - sphinxcontrib-bibtex =2.6.1
+  - sphinxcontrib-bibtex =2.6.2
   - sphinx-copybutton =0.5.2
   - sphinxcontrib-youtube =1.4.1
 
