--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -96,6 +96,8 @@ specs:
   - pyprep =0.4.3
   - openmeeg =2.5.7
   - python-neo =0.12.0
+  - pandas =2.2.0
+  - pyarrow =14.0.2
   # BLAS
   - openblas =0.3.25
   - libblas =3.9.0=*openblas
