--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
-[tool.ruff]
+[tool.ruff.lint]
 select = ["E", "F", "W", "D"]
 ignore = [
     "D100", # Missing docstring in public module
     "D104", # Missing docstring in public package
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/test_imports.py" = ["E402", "F401"]
 "tests/test_gui.py" = ["E402"]
