Start using Apple Silicon, and add test on macOS-13 (Intel)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,16 +19,11 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   # Build installers
   build_macos:
-    name: Build (macOS ${{ matrix.arch }})
+    name: Build (macOS)
     strategy:
       fail-fast: false
-      matrix:
-        include:
-          - arch: x86_64
-          - arch: arm64
     runs-on: macos-11
     env:
-      MNE_CROSSCOMPILE_ARCH: ${{ matrix.arch }}
       GITHUB_EVENT_NAME: ${{ github.event_name }}
     defaults:
       run:
@@ -126,17 +121,12 @@ jobs:
 
   # Test
   test_macos:
-    name: Test (${{ matrix.os }} ${{ matrix.arch }})
+    name: Test (${{ matrix.os }})
     needs: [build_macos]
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11, macos-12]
-        arch: [x86_64]
-        # We currently can't/don't test anything about the arm64 build
-        # include:
-        #   - os: macos-11
-        #     arch: arm64
+        os: [macos-11, macos-12, macos-13, macos-14]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -255,12 +245,9 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: MNE-Python-macOS-arm64
-      # We don't have a JSON, as this is only produced upon successful
-      # installation. Since we don't have an Apple Silicon runner on GHA,
-      # disable this for now.
-      # - uses: actions/download-artifact@v3
-      #   with:
-      #     name: MNE-Python-macOS-arm64-json
+      - uses: actions/download-artifact@v3
+        with:
+          name: MNE-Python-macOS-arm64-json
       - run: ls -al ./
       - uses: ncipollo/release-action@v1
         with:
