--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   # Build installers
   build_macos:
-    name: Build (macOS)
+    name: Build (${{ matrix.os }})
     strategy:
       fail-fast: false
       matrix:
