--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,6 +135,10 @@ jobs:
         shell: bash -el {0}
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+        if: ${{ matrix.os == 'macos-14' }}
       - run: ./tools/extract_version.sh
       - uses: actions/download-artifact@v3
         with:
